# av1_learning

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: AV1解码过程文档.md
examples/: simple_decoder.py
src/: __init__.py  constants.py
src/bitstream/: __init__.py  bit_reader.py  descriptors.py
src/container/: __init__.py  ivf_parser.py
src/entropy/: __init__.py  cdf_selection.py  default_cdfs.py  symbol_decoder.py
src/frame/: __init__.py  cdef.py  decoding_process.py  frame_header.py  loop_filter.py  loop_restoration.py  output_process.py  ref_frame_store.py
src/mode/: __init__.py  find_mv_stack.py  mode_info.py  motion_field_estimation.py  motion_vector.py
src/obu/: __init__.py  decoder.py  metadata_obu.py  obu.py  obu_parser.py  seq_header.py  tile_list_obu.py
src/reconstruction/: __init__.py  predict.py  prediction.py  reconstruct.py
src/residual/: __init__.py  coeff_context.py  palette.py  residual.py  transform_utils.py  tx_size.py
src/sequence/: __init__.py  sequence_header.py
src/tile/: __init__.py  tile_group.py
src/utils/: __init__.py  boundary_utils.py  context_utils.py  filter_utils.py  frame_utils.py  math_utils.py  mv_utils.py  tile_utils.py
tests/: test_math.py  test_reader.py
